fix: align content on zoos map page

--- a/online-zoo/pages/zoos-map/zoos-map.css
+++ b/online-zoo/pages/zoos-map/zoos-map.css
@@ -178,7 +178,7 @@ header {
   width: 100%;
   height: 100vh;
   background: url(../../assets/images/zoos-map.png);
-  background-position: -5vw -37vw;
+  background-position: -5vw -36.5vw;
   background-size: 113vw 114vw;
   display: flex;
   justify-content: center;
@@ -361,8 +361,8 @@ header {
     height: 416px;
   }
   .background-map {
-    background-position: 1vw -25vw;
-    background-size: 115vw 114vw;
+    background-position: 1vw -26.5vw;
+    background-size: 115vw 116vw;
   }
   .background-map__mark_item1 {
     top: 16.5vw;
@@ -609,5 +609,8 @@ header {
   .background-map__mark_active .background-map__mark-animal {
     height: 30px;
     width: 30px;
+  }
+  .button__order3 {
+    order: 4;
   }
 }
